# MeteoApp

./: CMakeLists.txt  README.md  main.cpp
Database/: DatabaseConnection.cpp  DatabaseConnection.h
Datatypes/: CloudQuantity.cpp  Email.cpp  Password.cpp  Temperature.cpp  Temperature.h  WindSpeed.cpp  WindSpeed.h
Entities/Catastrophe/: Catastrophe.cpp  Catastrophe.h  Earthquake.cpp  Earthquake.h  Flood.cpp  Flood.h  Tornado.cpp  Tornado.h  Tsunami.cpp  Tsunami.h
Entities/Meteo/: Meteo.cpp  Meteo.h
Entities/Preference/: Preference.cpp  Preference.h
Entities/Profile/: Profile.cpp  Profile.h
Entities/Threshold/: Threshold.cpp  Threshold.h
Entities/User/: User.cpp  User.h
Entities/Zone/: City.cpp  City.h  Country.cpp  Country.h  Region.cpp  Region.h  Zone.cpp  Zone.h
Repositories/: MeteoRepository.cpp  MeteoRepository.h  PreferenceRepository.cpp  PreferenceRepository.h  ProfileRepository.cpp  ProfileRepository.h  ThresholdRepository.cpp  ThresholdRepository.h  UserRepository.cpp  UserRepository.h  ZoneRepository.cpp  ZoneRepository.h
Services/: JSONParser.cpp  JSONParser.h  WeatherApi.cpp  WeatherApi.h
Services/Demo/: Demo.cpp  Demo.h
Services/WeatherData/: WeatherData.cpp  WeatherData.h
